Sun Dec 27 01:58:56 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportReceiveStrategy.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.inl:
        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

	  Dropped unnecessary copy of transport header; added accessor
	  to TransportReceiveStrategy for receive_transport_header_.

Wed Dec 23 20:49:35 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Changed to use GUID values with our vendor Id when generating
          handle values.

        * tools/odds_monitor/MonitorDataStorage.inl:

          Use GUID values with our vendor Id when generating GUID values
          from Builtin Topic keys.

        * tools/odds_monitor/MonitorTask.cpp:

          Make the readers TRANSIENT_LOCAL durability to ensure they
          receive historical data when joining.

        * tools/odds_monitor/Monitor_main.cpp:
        * tools/odds_monitor/monitor.conf:

          Remove monitor service from the monitor application.  This was
          for initial testing only and has become obsolete.

Wed Dec 23 01:02:33 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * wrapper/OpenDDS/OpenDDS_Domain_Manager.cpp:

          Dropped DEFAULT_SIMPLE_UDP constant.

Tue Dec 22 21:11:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * wrapper/DDSWrapper_OpenDDS.mpc:

          Added support for new udp transport.

Tue Dec 22 16:55:45 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tools/odds_monitor/MonitorData.cpp:

          Fixed issue with QString conversion to const char* due to
          toLocal8Bit returned array destroyed.

Mon Dec 21 21:42:37 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Publish DP reports after a create_topic() call.
