@@ -23,6 +23,11 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+class AST_Template_Interface;
+class AST_Instantiated_Connector;
+class AST_Tmpl_Port;
+class AST_Tmpl_Mirror_Port;
+
 class idl2jni_visitor : public ast_visitor {
 public:
   explicit idl2jni_visitor(AST_Decl *scope, CORBA::Boolean in_reopened = 0);
@@ -105,7 +110,27 @@ public:
 
 #if (TAO_MAJOR_VERSION > 2 || (TAO_MAJOR_VERSION == 1 && \
  (TAO_MINOR_VERSION > 7 || (TAO_MINOR_VERSION == 7 && TAO_BETA_VERSION > 3))))
+
+  //#  if (TAO_MAJOR_VERSION > 2 || (TAO_MAJOR_VERSION == 1 &&
+  // (TAO_MINOR_VERSION > 7 || (TAO_MINOR_VERSION == 7 && TAO_BETA_VERSION > 5))))
+
+  virtual int visit_template_module (AST_Template_Module *node);
+
+  virtual int visit_template_module_inst (AST_Template_Module_Inst *node);
+
+  virtual int visit_template_module_ref (AST_Template_Module_Ref *node);
+
+  //#  else
+
   virtual int visit_template_interface(AST_Template_Interface *node);
+
+  virtual int visit_instantiated_connector(AST_Instantiated_Connector *node);
+
+  virtual int visit_tmpl_port(AST_Tmpl_Port *node);
+
+  virtual int visit_tmpl_mirror_port(AST_Tmpl_Mirror_Port *node);
+
+  //#  endif
 
   virtual int visit_porttype(AST_PortType *node);
 
@@ -125,11 +150,6 @@ public:
 
   virtual int visit_connector(AST_Connector *node);
 
-  virtual int visit_instantiated_connector(AST_Instantiated_Connector *node);
-
-  virtual int visit_tmpl_port(AST_Tmpl_Port *node);
-
-  virtual int visit_tmpl_mirror_port(AST_Tmpl_Mirror_Port *node);
 #endif
 
 protected:
