@@ -1,3 +1,12 @@
+Wed Dec 30 21:59:30 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>
+
+        * java/idl2jni/codegen/idl2jni_visitor.h:
+        * java/idl2jni/codegen/idl2jni_visitor.cpp:
+        * java/idl2jni/codegen/im_jni.cpp:
+
+          Make changes to track latest DOC group IDL compiler interface
+          changes.
+
 Sun Dec 27 01:58:56 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportReceiveStrategy.h:
@@ -5,8 +14,8 @@ Sun Dec 27 01:58:56 UTC 2009  Steven Stallion  <stallions@ociweb.com>
         * dds/DCPS/transport/multicast/ReliableMulticast.h:
         * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
 
-	  Dropped unnecessary copy of transport header; added accessor
-	  to TransportReceiveStrategy for receive_transport_header_.
+          Dropped unnecessary copy of transport header; added accessor
+          to TransportReceiveStrategy for receive_transport_header_.
 
 Wed Dec 23 20:49:35 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
